--- a/src/tools/rust-analyzer/Cargo.toml
+++ b/src/tools/rust-analyzer/Cargo.toml
@@ -34,6 +34,7 @@ inherits = "release"
 debug = 2
 
 [patch.'crates-io']
+nix = { git = "https://github.com/psumbera/nix.git", branch = "mypatch" }
 # rowan = { path = "../rowan" }
 
 # chalk-solve = { path = "../chalk/chalk-solve" }
